sequential_upload_final.log
  File "/tmp/upload_kb.py", line 2
    [1/185] ✓ MIGRATION_READY_REPORT.md
            ^
SyntaxError: invalid character '✓' (U+2713)
